# ordeal

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  ordeal.perf.toml  ordeal.toml  ordeal.toml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  nightly.yml  perf-nightly.yml  release.yml
benchmarks/: __main__.py  bug-benchmark.cases.md  bug-benchmark.example.toml  bug-benchmark.private.template.toml  bug-benchmark.public.toml  scan_evidence_index.py
benchmarks/evidence/: httpie-3.toml  pysnooper-3.toml  tornado-14.toml
benchmarks/fixtures/public_bugs/: __init__.py  httpie_sessions.py  pysnooper_writer.py  tornado_ioloop.py
benchmarks/fixtures/public_controls/: __init__.py  httpie_sessions.py  pysnooper_writer.py  tornado_ioloop.py
docs/: CNAME  api-reference.md  configuration.md  core-concepts.md  getting-started.md  index.md  llms.txt  philosophy.md  roadmap.md  robots.txt  simulate.md  troubleshooting.md
docs/concepts/: chaos-testing.md  coverage-guidance.md  differential-testing.md  divergence-evidence.md  durable-regressions.md  evidence-closure.md  fault-injection.md  property-assertions.md  reliability-coverage.md  safe-migrations.md  service-evidence-loop.md  shrinking.md  system-differential.md  test-meaningfulness.md
docs/guides/: auto.md  benchmark-manifests.md  bug-bundle.md  bug-evidence-records.md  cli.md  compose-configuration.md  compose-evidence-loop.md  compose-fault-model.md  compose-operations.md  compose-quickstart.md  compose-runner.md  compose-stateful-workflows.md  compose-traces.md  compose-troubleshooting.md  configuration.md  differential-evidence.md  differential-quickstart.md  differential-state-and-effects.md  divergence-evidence-troubleshooting.md  divergence-evidence.md  durable-regressions-ci.md  durable-regressions-faq.md  durable-regressions.md  evidence-closure.md  explorer.md  finding-evidence.md  integrations.md  migration-workflow.md  mutations.md  reliability-coverage-ci.md  reliability-coverage.md  revision-diff-troubleshooting.md  revision-diff.md  scan-finding-rules.md  scan-object-harnesses.md  scan-quickstart.md  scan-troubleshooting.md  simulate.md  system-differential-recipes.md  system-differential-troubleshooting.md  (+5 more)
docs/overrides/: main.html
docs/reference/: api.md  divergence-evidence-schema.md  durable-regression-schema.md  evidence-closure-schema.md  revision-diff-schema.md  scan-evidence-schema.md  system-differential.md  test-protection-schema.md
ordeal/: SKILL.md  __init__.py  __init__.pyi  _diff_worker.py  _diff_worker.pyi  _facade_loader.py  _observation.py  _observation.pyi  _revision_diff.py  _revision_diff.pyi  agent_schema.py  assertions.py  assertions.pyi  audit.py  audit.pyi  auto.py  auto.pyi  benchmarking.py  benchmarking.pyi  buggify.py  chaos.py  chaos.pyi  cli.py  cli.pyi  cmplog.py  compose.py  compose.pyi  concolic.py  config.py  config.pyi  demo.py  diff.py  diff.pyi  equivalence.py  equivalence.pyi  evidence.py  evidence.pyi  explore.py  explore.pyi  finding_evidence.py  (+35 more)
ordeal/faults/: __init__.py  concurrency.py  io.py  io.pyi  network.py  numerical.py  timing.py
ordeal/integrations/: __init__.py  atheris_engine.py  http.py  openapi.py  openapi.pyi  schemathesis_ext.py
ordeal/parts/: __init__.py
ordeal/parts/assertions/: always.py  declare.py  property.py
ordeal/parts/audit/: audit.py  auditstatehash.py  classtargetcallables.py  formatrelativechange.py  generatedcallablehelper.py  measureauditcoverageswithcoveragepy.py  measurecoveragewithpytestcov.py  measuregeneratedcoveragewithcoverage.py  moduleaudit.py  moduleaudittodict.py  normalizeauditfunctioncollection.py  validationworkers.py
ordeal/parts/auto/: analyzeshellstatements.py  appendseedexample.py  applymodelinferencepack.py  buildproofbundle.py  chaosfor.py  expandcontractnames.py  functionresult.py  fuzz.py  inferstrategies.py  lifecyclefaultruntime.py  lifecyclefollowupcontract.py  makeboundmethodcallable.py  mineobjectharnesshintscached.py  projectevidenceindex.py  reachabilityscore.py  scancrashpromoted.py  (+9 more)
scripts/: generate_facade_stubs.py  harvest_private_bug_benchmark_case.py  verify_compose_e2e_trace.py  verify_compose_evidence_loop.py  verify_compose_service_matrix.py  verify_evidence_closure_corpus.py  verify_evidence_closure_real_projects.py  verify_revision_change_corpus.py
showcase/: README.md  ordeal-demo.audit-summary.json  ordeal-demo.proofs.json  ordeal-demo.regressions.py  ordeal-demo.replay.md  ordeal-demo.scan.json  ordeal-demo.scan.md  ordeal-demo.scan.toml  perf-contract-pr.json
tests/: _audit_worker_target.py  _auto_harness_support.py  _auto_harness_target.py  _auto_target.py  _deep_target.py  _demo_shop.py  _explore_target.py  _hard_target.py  _mutation_bench_target.py  _mutation_target.py  _weak_coverage_target.py  migration_fixture_base.py  migration_fixture_candidate.py  test_ablation.py  test_agent_schema.py  test_assertions.py  test_audit.py  test_audit_diff_meta_init.py  test_auto.py  test_battle.py  test_benchmark_private_case_script.py  test_benchmarking.py  test_buggify.py  test_catalog.py  test_chaos.py  test_checkpoint_pool.py  test_ci_workflow.py  test_cli.py  test_cli_agent_json.py  test_cli_extended.py  test_compose.py  test_compose_evidence_docs.py  test_config.py  test_coverage_gaps.py  test_demo.py  test_diff.py  test_diff_observation.py  test_differential_docs.py  test_discoverability.py  test_divergence_evidence_docs.py  (+61 more)
tests/fixtures/: __init__.py
(+164 files in other folders)
