[project]
name = "ordeal"
dynamic = ["version"]
description = "Automated chaos testing for Python — fault injection, property assertions, and stateful exploration."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
atheris = ["atheris>=2.3.0"]
api = ["schemathesis>=3.30.0"]
all = [
    "atheris>=2.3.0",
    "schemathesis>=3.30.0",
    "numpy>=1.26.0",
]
dev = [
    "ruff>=0.4.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
ordeal = "ordeal.cli:main"

[project.entry-points.pytest11]
ordeal = "ordeal.plugin"

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools-scm]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
