[project]
name = "ordeal"
version = "0.3.15"
description = "Automated chaos testing for Python — fault injection, property assertions, and stateful exploration."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = [
    "testing",
    "chaos-testing",
    "fault-injection",
    "property-testing",
    "fuzzing",
    "hypothesis",
    "chaos-engineering",
    "mutation-testing",
    "pytest-plugin",
    "coverage-guided",
    "stateful-testing",
    "resilience-testing",
    "test-quality",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Hypothesis",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "coverage>=7.6.0",
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
atheris = ["atheris>=2.3.0"]
all = [
    "atheris>=2.3.0",
    "numpy>=1.26.0",
]
dev = [
    "ruff>=0.4.0",
    "pytest-cov>=5.0.0",
]
docs = [
    "mkdocs-material>=9.0.0",
]

[project.scripts]
ordeal = "ordeal.cli:main"

[project.entry-points.pytest11]
ordeal = "ordeal.plugin"

[project.urls]
Homepage = "https://byordeal.com"
Documentation = "https://docs.byordeal.com/"
Repository = "https://github.com/teilomillet/ordeal"
Issues = "https://github.com/teilomillet/ordeal/issues"
Changelog = "https://github.com/teilomillet/ordeal/releases"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ordeal*"]

[tool.setuptools.package-data]
ordeal = ["py.typed", "SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
markers = [
    "slow: long-running ablation/integration tests (> 10s)",
]
filterwarnings = [
    "ignore::hypothesis.errors.NonInteractiveExampleWarning",
    "ignore:.*use of fork.*:DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "numpy>=1.26.0; python_version >= '3.11'",
    "pytest-xdist>=3.8.0",
]
